--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ logging.level.org.springframework=INFO
 #spring.mvc.static-path-pattern=/resources/**
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
+
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mustache.expose-request-attributes=true
+upload.path = src/main/webapp/resources/img/
