--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.mvc.view.suffix=.jsp
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mustache.expose-request-attributes=true
 upload.path = src/main/webapp/resources/img/
+server.port = ${port:8080}
